Removed hyphens from most item, fluid, entity, and recipe names in order to aid in itemsearch.

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -11,7 +11,7 @@ crusher-ree=Crush rare-earth ores
 milling-ree=Milling rare-earth powder
 cumene-distilation=Distilation of cumene
 rendering=Zipir rendering
-antimatter-fusion=Slow-reacting antimatter
+antimatter-fusion=Slow reacting antimatter
 steam-exchange5=Steam exchange
 pa-aromatics=Breed aromatics
 pa-benzene=Breed benzene
@@ -49,7 +49,7 @@ py-hightech=Py High Tech
 
 [item-name]
 phosphate-rock=Phosphate rock
-rare-earth-ore=Rare-earth ore
+rare-earth-ore=Rare earth ore
 clay=Clay
 melamine=Melamine
 melamine-resin=Melamine resin
@@ -79,16 +79,16 @@ pcb3-2=Mounted circuit substrate
 pcb4=Printed circuit substrate (tier 4)
 electronic-circuit=Simple circuit board
 advanced-circuit=Complex circuit board
-processing-unit=High-tech circuit board
+processing-unit=High tech circuit board
 powdered-phosphate-rock=Powdered phosphate rock
 light-n=Lightly n-doped silicon
 heavy-n=Heavily n-doped silicon
 p-dope=Lightly p-doped silicon
 heavy-p-type=Heavily p-doped silicon
 rare-earth-powder=Rare Earth Powder
-rare-earth-dust=Rare-earth dust
-ree-concentrate=Rare-earth concentrate
-reo=Rare-earth oxides
+rare-earth-dust=Rare earth dust
+ree-concentrate=Rare earth concentrate
+reo=Rare earth oxides
 phenol=Phenol
 phenolicboard=Phenolic board
 bakelite=Bakelite
@@ -103,7 +103,7 @@ epoxy=Epoxy
 fiberglass=Fiberglass
 pdms=Polydimethylsiloxane (PDMS)
 nic-core=Nickel core
-pdms-graphene=PDMS-graphene base
+pdms-graphene=PDMS graphene base
 graphene-sheet=Graphene sheet
 graphene-roll=Graphene roll
 processor-core=Processor core
@@ -111,7 +111,7 @@ processor=Processor
 phosphate-glass=Phosphate glass
 high-flux-core=High Flux core
 stone-wool=Stone wool
-re-tin=Tin-rare-earth alloy
+re-tin=Tin rare earth alloy
 diode-core=Diode core
 capacitor-core=Capacitor core
 capacitor-termination=Capacitor terminal
@@ -125,7 +125,7 @@ nanochip=Nanochip
 raw-fiber=Raw fiber
 fiber=Fiber
 micro-fiber=Microfiber
-sub-denier-microfiber=Sub-denier microfiber
+sub-denier-microfiber=Sub denier microfiber
 resorcinol=Resorcinol
 rf-gel=RF gel
 clean-rf-gel=Clear RF gel
@@ -135,8 +135,8 @@ kondo-substrate=Kondo substrate
 kondo-core=Kondo core
 kondo-processor=Kondo processor
 heavy-fermion=Heavy fermion material
-crco-alloy=Cobalt-chromium alloy
-nxag-matrix=Nexelit-silver matrix
+crco-alloy=Cobalt chromium alloy
+nxag-matrix=Nexelit silver matrix
 paradiamatic-resistor=Paradiagmatic resistor
 zinc-acetate=Zinc acetate
 dry-ralesia=Dry ralesia
@@ -144,7 +144,7 @@ ralesia-powder=Ralesia powder
 zinc-nanocompound=Zinc nanocompound
 zinc-nanocomplex=Zinc nanocomplex
 zno-nanoparticles=Zinc oxide nanoparticles
-csle-diode=Cross-section light emitting diode
+csle-diode=Cross section light emitting diode
 ndfeb-alloy=Neodymium ferroboron alloy
 ndfeb-powder=Neodymium ferroboron powder
 re-magnet=Neodymium magnet
@@ -182,12 +182,12 @@ diamagnetic-material=Diamagnetic material
 superconductor-servomechanims=Superconductor servomechanisms
 harmonic-absorber=Harmonic absorber
 pyrolytic-carbon=Pyrolytic carbon
-nv-center=Nitrogen-vacancy center
+nv-center=Nitrogen vacancy center
 quantum-dots=Quantum dots
 pi-josephson-junction=Pi Josephson junction
 var-josephson-junction=Varphi Josephson junction
 quantum-vortex-storage-system=Quantum vortex storage system
-bose-einstein-superfluid=Bose-Einstein superfluid
+bose-einstein-superfluid=Bose Einstein superfluid
 antimatter=Antimatter
 crystallographic-substrate=Crystallographic substrate
 proton-donor=Proton donor
@@ -223,13 +223,13 @@ rare-earth-dust=Second step of rare-earth element extraction.
 bisphenol-a=Keep away from your body.
 epoxy=Multipurpose resin.
 pdms=Special gel to work into nanotech.
-nic-core=Nickel-based core.
+nic-core=Nickel based core.
 biopolymer=Advanced material for several purposes.
-rf-gel=Resorcinol-formaldehyde gel.
+rf-gel=Resorcinol formaldehyde gel.
 kondo-substrate=A place to build the powerful Kondo processor.
 heavy-fermion=Unconventional superconductor.
 kondo-processor=Able to make 1PT of Kondo calculations per second.
-ndfeb-alloy=Neodimium-iron-boron alloy.
+ndfeb-alloy=Neodimium iron boron alloy.
 intelligent-unit=Can you prove you're self aware?
 zipir-carcass=It was killed with mercy.
 rayon=Advanced fiber with many uses.
@@ -255,8 +255,8 @@ phosphoric-acid=Phosphoric acid
 phosphine-gas=Phosphine gas
 propene=Propene
 ethylene=Ethylene
-ree-slurry=Rare-earth slurry
-ree-solution=Rare-earth solution
+ree-slurry=Rare earth slurry
+ree-solution=Rare earth solution
 cumene=Cumene
 acetone=Acetone
 ech=Epichlorohydrin (ECH)
@@ -277,9 +277,9 @@ nitrobenzene=Nitrobenzene
 
 [entity-name]
 phosphate-rock=Ancient remains
-rare-earth-bolide=Rare-earth bolide
+rare-earth-bolide=Rare earth bolide
 phosphate-mine=Phosphate mine
-rare-earth-mine=Rare-earth extractor
+rare-earth-mine=Rare earth extractor
 clay-pit-mk01=Clay pit MK 01
 clay-pit-mk02=Clay pit MK 02
 clay-pit-mk03=Clay pit MK 03
@@ -400,7 +400,7 @@ integrated-circuits-1=Small scale integrated circuits
 integrated-circuits-2=Medium scale integrated circuits
 integrated-circuits-3=Large scale integrated circuits
 semiconductor-doping=Semiconductor doping
-rare-earth-tech=Rare-earth technology
+rare-earth-tech=Rare earth technology
 graphene=Graphene technology
 nano-tech=Nanotechnology
 aerogel=Aerogel
@@ -479,7 +479,7 @@ ht-trains=Unlocks the much more efficient nexelit powered trains.
 
 [ore-name]
 phosphate-rock=Phosphate rock
-rare-earth-ore=Rare-earth ore
+rare-earth-ore=Rare earth ore
 
 [autoplace-control-names]
 phosphate-rock=[img=entity.phosphate-rock] Phosphate rock
