Fixed wrong graphics for locomotive MK03 shadow. Resolves https://github.com/pyanodon/pybugreports/issues/827

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -195,7 +195,7 @@ proton-receiver=Proton receiver
 blackhole-fuel=Matter
 magic-furnace=Singularity energy extractor
 ht-locomotive=HighTech Locomotive MK01
-ht-generic-wagon=Nexelit reinforced wagon.
+ht-generic-wagon=Nexelit reinforced wagon
 nexelit-battery=Nexelit Battery
 used-nexelit-battery=Spent Nexelit Battery
 
@@ -335,6 +335,7 @@ ht-generic-wagon=Nexelit floating generic wagon
 ht-generic-fluid-wagon=Nexelit floating generic fluid wagon
 crash-site-assembling-machine-1-repaired=Crashed ship assembler
 py-roboport-mk03=Py roboport MK 03
+
 [entity-description]
 auog-paddock=Shy night creatures known as aougs.
 phosphate-rock=A small deposit full of the skeletal remains of ancient life. Requires a small phosphate mine to extract the phosphate rock.
