Locale fix for hightech locomotive

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -194,7 +194,7 @@ proton-donor=Proton donor
 proton-receiver=Proton receiver
 blackhole-fuel=Matter
 magic-furnace=Singularity energy extractor
-ht-locomotive=HighTech Locomotive MK01
+ht-locomotive=HighTech locomotive
 ht-generic-wagon=Nexelit reinforced wagon
 nexelit-battery=Nexelit Battery
 used-nexelit-battery=Spent Nexelit Battery
