Migrated the internal name of the "vacuum-tube-electronics" technology to "electronics". Resolves https://github.com/pyanodon/pybugreports/issues/453

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -394,7 +394,7 @@ ht-generic-wagon=Nexelit reinforced wagon.
 ht-generic-fluid-wagon=Nexelit reinforced fluid wagon.
 
 [technology-name]
-vacuum-tube-electronics=Vacuum tube electronics
+electronics=Vacuum tube electronics
 basic-electronics=Basic electronics
 advanced-electronics=Advanced electronics
 integrated-circuits-1=Small scale integrated circuits
@@ -458,7 +458,7 @@ plastics-mk04=Plastics 4
 ceramic=Ceramic
 
 [technology-description]
-vacuum-tube-electronics=Unlock very basic vacuum tube based circuits
+electronics=Unlock very basic vacuum tube based circuits
 basic-electronics=Unlock basic transistor based processes and components.
 advanced-electronics=Unlock advanced transistors processes and components.
 advanced-electronics-2=Unlock very advanced transistors processes and components.
