--- a/locale/ru/locale.cfg
+++ b/locale/ru/locale.cfg
@@ -391,7 +391,7 @@ ht-generic-fluid-wagon=Усиленный некселитовый вагон-ц
 phosphate-rock-02=Массивные сохранившиеся останки древнего существа. Считайте, что вам повезло, что эти существа вымерли давным-давно. Для добычи фосфатного сырья требуется большая фосфатная шахта.
 
 [technology-name]
-vacuum-tube-electronics=Электроника на вакуумных лампах
+electronics=Электроника на вакуумных лампах
 basic-electronics=Базовая электроника
 advanced-electronics=Продвинутая электроника
 integrated-circuits-1=Интегральные схемы малого масштаба
@@ -452,7 +452,7 @@ plastics-mk04=Пластик 4
 ceramic=Керамика
 
 [technology-description]
-vacuum-tube-electronics=Разблокируйте очень простые схемы на основе электронных ламп.
+electronics=Разблокируйте очень простые схемы на основе электронных ламп.
 basic-electronics=Разблокируйте основные процессы и компоненты на основе транзисторов.
 advanced-electronics=Разблокируйте передовые процессы и компоненты на основе транзисторов.
 semiconductor-doping=Откройте для себя технологию легирования методом осаждения из паровой фазы.
