--- a/locale/uk/locale.cfg
+++ b/locale/uk/locale.cfg
@@ -393,7 +393,7 @@ ht-generic-wagon=Посилений некселітом вагон.
 ht-generic-fluid-wagon=Посилений некселітом вагон-цистерна
 
 [technology-name]
-vacuum-tube-electronics=Лампова електроніка
+electronics=Лампова електроніка
 basic-electronics=Базова електроніка
 advanced-electronics=Передова електроніка
 integrated-circuits-1=Малі інтегральні схеми
@@ -457,7 +457,7 @@ plastics-mk04=Пластмаса 4
 ceramic=Кераміка
 
 [technology-description]
-vacuum-tube-electronics=Розблоковує дуже прості схеми на основі вакуумної лампи
+electronics=Розблоковує дуже прості схеми на основі вакуумної лампи
 basic-electronics=Розблоковує основні транзисторні процеси та компоненти.
 advanced-electronics=Розблоковує передові транзисторні процеси та компоненти.
 advanced-electronics-2=Розблоковує дуже передові транзисторні процеси та компоненти.
