--- a/locale/zh-CN/pyhightech.cfg
+++ b/locale/zh-CN/pyhightech.cfg
@@ -404,7 +404,7 @@ ht-generic-wagon=蓝坷垃加固货运车厢。
 ht-generic-fluid-wagon=蓝坷垃加固液罐车厢。
 
 [technology-name]
-vacuum-tube-electronics=真空管电子学						   
+electronics=真空管电子学						   
 basic-electronics=基础电子学
 advanced-electronics=高级电子学
 integrated-circuits-1=小型集成电路
@@ -470,7 +470,7 @@ plastics-mk04=塑料4
 ceramic=陶瓷制品
 
 [technology-description]
-vacuum-tube-electronics=解锁非常基本的基真空管的电路。
+electronics=解锁非常基本的基真空管的电路。
 basic-electronics=解锁基于晶体管的基本工艺和组件。
 advanced-electronics=解锁高级晶体管工艺和组件。
 advanced-electronics-2=解锁非常先进的晶体管工艺和组件。
