Renamed all 4 stages of electronics technology to use "Stage - N" pattern.

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -394,16 +394,16 @@ ht-generic-wagon=Nexelit reinforced wagon.
 ht-generic-fluid-wagon=Nexelit reinforced fluid wagon.
 
 [technology-name]
-electronics=Vacuum tube electronics
-basic-electronics=Basic electronics
-advanced-electronics=Advanced electronics
+electronics=Electronics - Stage 1
+basic-electronics=Electronics - Stage 2
+advanced-electronics=Electronics - Stage 3
+nano-tech=Electronics - Stage 4
 integrated-circuits-1=Small scale integrated circuits
 integrated-circuits-2=Medium scale integrated circuits
 integrated-circuits-3=Large scale integrated circuits
 semiconductor-doping=Semiconductor doping
 rare-earth-tech=Rare earth technology
 graphene=Graphene technology
-nano-tech=Nanotechnology
 aerogel=Aerogel
 earnshaw-theorem=Earnshaw's theorem
 quantum=Quantum computing
