Fixed incorrect locale keys for the Electronics - Stage 3 technology.

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -396,7 +396,7 @@ ht-generic-fluid-wagon=Nexelit reinforced fluid wagon.
 [technology-name]
 electronics=Electronics - Stage 1
 basic-electronics=Electronics - Stage 2
-advanced-electronics=Electronics - Stage 3
+advanced-circuit=Electronics - Stage 3
 nano-tech=Electronics - Stage 4
 integrated-circuits-1=Small scale integrated circuits
 integrated-circuits-2=Medium scale integrated circuits
@@ -460,7 +460,7 @@ ceramic=Ceramic
 [technology-description]
 electronics=Unlock very basic vacuum tube based circuits
 basic-electronics=Unlock basic transistor based processes and components.
-advanced-electronics=Unlock advanced transistors processes and components.
+advanced-circuit=Unlock advanced transistors processes and components.
 advanced-electronics-2=Unlock very advanced transistors processes and components.
 intergrated-circuits-1=Early silicon based circuits with only a few transistors per chip
 intergrated-circuits-2=More advanced circuits with thousands of miniturized transistors
