--- a/locale/uk/locale.cfg
+++ b/locale/uk/locale.cfg
@@ -395,7 +395,7 @@ ht-generic-fluid-wagon=Посилений некселітом вагон-цис
 [technology-name]
 electronics=Лампова електроніка
 basic-electronics=Базова електроніка
-advanced-electronics=Передова електроніка
+advanced-circuit=Передова електроніка
 integrated-circuits-1=Малі інтегральні схеми
 integrated-circuits-2=Середні інтегральні схеми
 integrated-circuits-3=Великі інтегральні схеми
@@ -459,7 +459,7 @@ ceramic=Кераміка
 [technology-description]
 electronics=Розблоковує дуже прості схеми на основі вакуумної лампи
 basic-electronics=Розблоковує основні транзисторні процеси та компоненти.
-advanced-electronics=Розблоковує передові транзисторні процеси та компоненти.
+advanced-circuit=Розблоковує передові транзисторні процеси та компоненти.
 advanced-electronics-2=Розблоковує дуже передові транзисторні процеси та компоненти.
 intergrated-circuits-1=Ранні кремнієві схеми з кількома транзисторами на мікросхему
 intergrated-circuits-2=Досконаліші схеми з тисячами мініатюрних транзисторів
