--- a/locale/zh-CN/pyhightech.cfg
+++ b/locale/zh-CN/pyhightech.cfg
@@ -406,7 +406,7 @@ ht-generic-fluid-wagon=蓝坷垃加固液罐车厢。
 [technology-name]
 electronics=真空管电子学						   
 basic-electronics=基础电子学
-advanced-electronics=高级电子学
+advanced-circuit=高级电子学
 integrated-circuits-1=小型集成电路
 integrated-circuits-2=中型集成电路
 integrated-circuits-3=大型集成电路
@@ -472,7 +472,7 @@ ceramic=陶瓷制品
 [technology-description]
 electronics=解锁非常基本的基真空管的电路。
 basic-electronics=解锁基于晶体管的基本工艺和组件。
-advanced-electronics=解锁高级晶体管工艺和组件。
+advanced-circuit=解锁高级晶体管工艺和组件。
 advanced-electronics-2=解锁非常先进的晶体管工艺和组件。
 intergrated-circuits-1=早期的硅基电路，每个芯片只有几个晶体管。
 intergrated-circuits-2=具有数千个微型晶体管的更先进的电路。
