RU locale update to v3.0.12

--- a/locale/ru/locale.cfg
+++ b/locale/ru/locale.cfg
@@ -191,7 +191,7 @@ proton-donor=Донор протонов
 proton-receiver=Реципиент протонов
 blackhole-fuel=Материя
 magic-furnace=Извлекатель энергии из сингулярности
-ht-locomotive=Высокотехнологичный локомотив МК1
+ht-locomotive=Высокотехнологичный локомотив
 ht-generic-wagon=Усиленный некселитовый вагон
 nexelit-battery=Некселитовая батарея
 used-nexelit-battery=Отработанная некселитовая батарея
@@ -391,16 +391,16 @@ ht-generic-fluid-wagon=Усиленный некселитовый вагон-ц
 phosphate-rock-02=Массивные сохранившиеся останки древнего существа. Считайте, что вам повезло, что эти существа вымерли давным-давно. Для добычи фосфатного сырья требуется большая фосфатная шахта.
 
 [technology-name]
-electronics=Электроника на вакуумных лампах
-basic-electronics=Базовая электроника
-advanced-circuit=Продвинутая электроника
+electronics=Электроника - Этап 1
+basic-electronics=Электроника - Этап 2
+advanced-circuit=Электроника - Этап 3
+nano-tech=Электроника - Этап 4
 integrated-circuits-1=Интегральные схемы малого масштаба
 integrated-circuits-2=Интегральные схемы среднего масштаба
 integrated-circuits-3=Интегральные схемы большого масштаба
 semiconductor-doping=Легирование полупроводников
 rare-earth-tech=Редкоземельные элементы
 graphene=Графеновые технологии
-nano-tech=Нанотехнологии
 aerogel=Аэрогель
 earnshaw-theorem=Теорема Ирншоу
 quantum=Квантовые вычисления
@@ -452,13 +452,13 @@ plastics-mk04=Пластик 4
 ceramic=Керамика
 
 [technology-description]
-electronics=Разблокируйте очень простые схемы на основе электронных ламп.
+electronics=Разблокируйте самые простые схемы на вакуумных лампах.
 basic-electronics=Разблокируйте основные процессы и компоненты на основе транзисторов.
-advanced-circuit=Разблокируйте передовые процессы и компоненты на основе транзисторов.
+advanced-circuit=Разблокируйте продвинутые процессы и компоненты на основе транзисторов.
+nano-tech=Разблокируйте нанокомпоненты и нанотехнологии.
 semiconductor-doping=Откройте для себя технологию легирования методом осаждения из паровой фазы.
 rare-earth-tech=Даёт доступ к исследованию редкоземельных элементов.
 graphene=Разблокируйте графеновые технологии и производство.
-nano-tech=Разблокируйте нанокомпоненты и нанотехнологии.
 aerogel=Откройте технологию аэрогеля.
 earnshaw-theorem=Теорема об электростатическом поле, сформулированная в XIX веке английским физиком Ирншоу.
 quantum=Разблокируйте квантовые технологии и квантовый компьютер.
