RU locale 'MKxx' fix

--- a/locale/ru/locale.cfg
+++ b/locale/ru/locale.cfg
@@ -278,51 +278,51 @@ rare-earth-bolide=Редкоземельный метеорит
 phosphate-mine=Фосфатовый карьер
 rare-earth-mine=Экстрактор редкоземельной руды
 clay-pit-mk01=Глиняный карьер МК1
-clay-pit-mk02=Глиняный карьер MK2
-clay-pit-mk03=Глиняный карьер MK3
-clay-pit-mk04=Глиняный карьер MK4
+clay-pit-mk02=Глиняный карьер МК2
+clay-pit-mk03=Глиняный карьер МК3
+clay-pit-mk04=Глиняный карьер МК4
 moondrop-greenhouse-mk01=Теплица лунных капель МК1
-moondrop-greenhouse-mk02=Теплица лунных капель MK2
-moondrop-greenhouse-mk03=Теплица лунных капель MK3
-moondrop-greenhouse-mk04=Теплица лунных капель MK4
+moondrop-greenhouse-mk02=Теплица лунных капель МК2
+moondrop-greenhouse-mk03=Теплица лунных капель МК3
+moondrop-greenhouse-mk04=Теплица лунных капель МК4
 fbreactor-mk01=Реактор псевдоожижения МК1
-fbreactor-mk02=Реактор псевдоожижения MK2
-fbreactor-mk03=Реактор псевдоожижения MK3
-fbreactor-mk04=Реактор псевдоожижения MK4
+fbreactor-mk02=Реактор псевдоожижения МК2
+fbreactor-mk03=Реактор псевдоожижения МК3
+fbreactor-mk04=Реактор псевдоожижения МК4
 auog-paddock=Загон аугов
 electronics-factory-mk01=Завод электроники МК1
-electronics-factory-mk02=Завод электроники MK2
-electronics-factory-mk03=Завод электроники MK3
-electronics-factory-mk04=Завод электроники MK4
+electronics-factory-mk02=Завод электроники МК2
+electronics-factory-mk03=Завод электроники МК3
+electronics-factory-mk04=Завод электроники МК4
 pulp-mill-mk01=Целлюлозный завод МК1
-pulp-mill-mk02=Целлюлозный завод MK2
-pulp-mill-mk03=Целлюлозный завод MK3
-pulp-mill-mk04=Целлюлозный завод MK4
+pulp-mill-mk02=Целлюлозный завод МК2
+pulp-mill-mk03=Целлюлозный завод МК3
+pulp-mill-mk04=Целлюлозный завод МК4
 pcb-factory-mk01=Фабрика подложек МК1
-pcb-factory-mk02=Фабрика подложек MK2
-pcb-factory-mk03=Фабрика подложек MK3
-pcb-factory-mk04=Фабрика подложек MK4
+pcb-factory-mk02=Фабрика подложек МК2
+pcb-factory-mk03=Фабрика подложек МК3
+pcb-factory-mk04=Фабрика подложек МК4
 chipshooter-mk01=Сборщик плат МК1
-chipshooter-mk02=Сборщик плат MK2
-chipshooter-mk03=Сборщик плат MK3
-chipshooter-mk04=Сборщик плат MK4
+chipshooter-mk02=Сборщик плат МК2
+chipshooter-mk03=Сборщик плат МК3
+chipshooter-mk04=Сборщик плат МК4
 nano-assembler-mk01=Молекулярный сборщик МК1
 nano-assembler-mk02=Молекулярный сборщик МК2
 nano-assembler-mk03=Молекулярный сборщик МК3
 nano-assembler-mk04=Молекулярный сборщик МК4
 cadaveric-arum-mk01=Теплица трупного аронника МК1
-cadaveric-arum-mk02=Теплица трупного аронника MK2
-cadaveric-arum-mk03=Теплица трупного аронника MK3
-cadaveric-arum-mk04=Теплица трупного аронника MK4
+cadaveric-arum-mk02=Теплица трупного аронника МК2
+cadaveric-arum-mk03=Теплица трупного аронника МК3
+cadaveric-arum-mk04=Теплица трупного аронника МК4
 kicalk-plantation=Плантация кикалька
 zipir=Искусственный риф зипиров
 py-construction-robot-mk04=Строительный дрон МК4
 py-logistic-robot-mk04=Транспортный дрон МК4
 quantum-computer=Квантовый компьютер
 particle-accelerator-mk01=Ускоритель частиц МК1
-particle-accelerator-mk02=Ускоритель частиц MK2
-particle-accelerator-mk03=Ускоритель частиц MK3
-particle-accelerator-mk04=Ускоритель частиц MK4
+particle-accelerator-mk02=Ускоритель частиц МК2
+particle-accelerator-mk03=Ускоритель частиц МК3
+particle-accelerator-mk04=Ускоритель частиц МК4
 blackhole=Извлекатель энергии из сингулярности
 magic-furnace=Извлекатель энергии из сингулярности
 ht-pipes=Многоцелевая труба
