Changed the internal name of the intelligent unit technology from "nano-tech" to "quantum-processor".

--- a/locale/de/locale.cfg
+++ b/locale/de/locale.cfg
@@ -313,7 +313,7 @@ advanced-circuit=Fortschrittliche Elektronik
 semiconductor-doping=Halbleiterdoping
 rare-earth-tech=Seltene-Erden-Technologie
 graphene=Graphen-Technologie
-nano-tech=Nanotechnologie
+quantum-processor=Nanotechnologie
 aerogel=Aerogel
 earnshaw-theorem=Earnshaw-Theorem
 quantum=Quanten-Computing
@@ -326,7 +326,7 @@ advanced-circuit=Schaltet fortschrittliche Komponenten und Prozesse frei.
 semiconductor-doping=Ermöglkicht das Doping von Halbleitern.
 rare-earth-tech=Ermöglicht die Verarbeitung von Seltenen Erden.
 graphene=Ermöglicht die Herstellung vom Supermaterial Graphen.
-nano-tech=Ermöglicht die Herstellung von Nanotechnologie.
+quantum-processor=Ermöglicht die Herstellung von Nanotechnologie.
 aerogel=Ermöglicht die Herstellung von Aerogel.
 earnshaw-theorem=Komplizierter physikalischer Effekt der Elektrodynamik.
 quantum=Ermöglicht den Bau von Quantencomputern. GOING QUANTUM!
