--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -397,7 +397,7 @@ ht-generic-fluid-wagon=Nexelit reinforced fluid wagon.
 electronics=Electronics - Stage 1
 basic-electronics=Electronics - Stage 2
 advanced-circuit=Electronics - Stage 3
-nano-tech=Electronics - Stage 4
+quantum-processor=Electronics - Stage 4
 integrated-circuits-1=Small scale integrated circuits
 integrated-circuits-2=Medium scale integrated circuits
 integrated-circuits-3=Large scale integrated circuits
@@ -468,7 +468,7 @@ intergrated-circuits-3=Highly advanced circuits with millions of near atomic sca
 semiconductor-doping=Unlock doping technology by vapor deposition.
 rare-earth-tech=Give access to explore the rare-earth elements.
 graphene=Unlock graphene technologies and production.
-nano-tech=Unlock nanoscale components and technologies.
+quantum-processor=Unlock nanoscale components and technologies.
 aerogel=Unlock aerogel technology.
 earnshaw-theorem=Classic inverse-square magnetic forces by gravitational fields.
 quantum=Unlock quantum technologies and the quantum computer.
