--- a/locale/uk/locale.cfg
+++ b/locale/uk/locale.cfg
@@ -397,7 +397,7 @@ ht-generic-fluid-wagon=Посилений некселітом вагон-цис
 electronics=Електроніка: 1 етап
 basic-electronics=Електроніка: 2 етап
 advanced-circuit=Електроніка: 3 етап
-nano-tech=Електроніка: 4 етап
+quantum-processor=Електроніка: 4 етап
 integrated-circuits-1=Малі інтегральні схеми
 integrated-circuits-2=Середні інтегральні схеми
 integrated-circuits-3=Великі інтегральні схеми
@@ -468,7 +468,7 @@ intergrated-circuits-3=Високодосконалі схеми з мільйо
 semiconductor-doping=Розблоковує технологію легування шляхом осадження з парової фази.
 rare-earth-tech=Відкриває дослідження рідкоземельних елементів.
 graphene=Розблоковує графенові технології та виробництво.
-nano-tech=Розблоковує нанорозмірні компоненти та технології.
+quantum-processor=Розблоковує нанорозмірні компоненти та технології.
 aerogel=Розблоковує технологію аерогелю.
 earnshaw-theorem=Класичні зворотні квадрати магнітних із від гравітаційних полів. (звучить як якась наукова тарабарщина)
 quantum=Розблоковує квантові технології та квантовий комп’ютер.
