--- a/locale/zh-CN/pyhightech.cfg
+++ b/locale/zh-CN/pyhightech.cfg
@@ -413,7 +413,7 @@ integrated-circuits-3=大型集成电路
 semiconductor-doping=半导体掺杂
 rare-earth-tech=稀土技术
 graphene=石墨烯技术
-nano-tech=纳米技术
+quantum-processor=纳米技术
 aerogel=气凝胶技术
 earnshaw-theorem=恩绍定理
 quantum=量子计算
@@ -480,7 +480,7 @@ intergrated-circuits-3=高度先进的电路，拥有数百万个接近原子尺
 semiconductor-doping=通过气相沉积解锁掺杂技术。
 rare-earth-tech=提供探索稀土元素的途径。
 graphene=解锁石墨烯技术和生产。
-nano-tech=解锁纳米组件和技术。
+quantum-processor=解锁纳米组件和技术。
 aerogel=解锁气凝胶技术。
 earnshaw-theorem=引力场产生的经典平方反比磁力。
 quantum=解锁量子技术和量子计算机。
