Migrate the internal name of the "quantum" technology to "space-science-pack".

--- a/locale/de/locale.cfg
+++ b/locale/de/locale.cfg
@@ -316,7 +316,7 @@ graphene=Graphen-Technologie
 quantum-processor=Nanotechnologie
 aerogel=Aerogel
 earnshaw-theorem=Earnshaw-Theorem
-quantum=Quanten-Computing
+space-science-pack=Quanten-Computing
 penrose=Penrose-Prozess
 nucleo=Nukleosynthese
 
@@ -329,7 +329,7 @@ graphene=Ermöglicht die Herstellung vom Supermaterial Graphen.
 quantum-processor=Ermöglicht die Herstellung von Nanotechnologie.
 aerogel=Ermöglicht die Herstellung von Aerogel.
 earnshaw-theorem=Komplizierter physikalischer Effekt der Elektrodynamik.
-quantum=Ermöglicht den Bau von Quantencomputern. GOING QUANTUM!
+space-science-pack=Ermöglicht den Bau von Quantencomputern. GOING QUANTUM!
 nucleo=Ab hier wird es gefährlich! Achtung vor schwarzen Löchern!
 penrose=Die ultimative Energieerzeugung! MEHR ENERGIE!
 
