--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -406,7 +406,7 @@ rare-earth-tech=Rare earth technology
 graphene=Graphene technology
 aerogel=Aerogel
 earnshaw-theorem=Earnshaw's theorem
-quantum=Quantum computing
+space-science-pack=Quantum computing
 penrose=The Penrose process
 nucleo=Nucleosynthesis
 ht-trains=High tech trains MK01
@@ -471,7 +471,7 @@ graphene=Unlock graphene technologies and production.
 quantum-processor=Unlock nanoscale components and technologies.
 aerogel=Unlock aerogel technology.
 earnshaw-theorem=Classic inverse-square magnetic forces by gravitational fields.
-quantum=Unlock quantum technologies and the quantum computer.
+space-science-pack=Unlock quantum technologies and the quantum computer.
 nucleo=Entering into a dangerous area.
 penrose=Ultimate energy that can be extracted from a rotating black hole.
 ht-trains=Unlocks the much more efficient nexelit powered trains.
