--- a/locale/ru/locale.cfg
+++ b/locale/ru/locale.cfg
@@ -403,7 +403,7 @@ rare-earth-tech=Редкоземельные элементы
 graphene=Графеновые технологии
 aerogel=Аэрогель
 earnshaw-theorem=Теорема Ирншоу
-quantum=Квантовые вычисления
+space-science-pack=Квантовые вычисления
 penrose=Процесс Пенроуза
 nucleo=Нуклеосинтез
 ht-trains=Высокотехнологичные поезда МК1
@@ -461,7 +461,7 @@ rare-earth-tech=Даёт доступ к исследованию редкозе
 graphene=Разблокируйте графеновые технологии и производство.
 aerogel=Откройте технологию аэрогеля.
 earnshaw-theorem=Теорема об электростатическом поле, сформулированная в XIX веке английским физиком Ирншоу.
-quantum=Разблокируйте квантовые технологии и квантовый компьютер.
+space-science-pack=Разблокируйте квантовые технологии и квантовый компьютер.
 penrose=Бесконечная энергия, которую можно извлечь из вращения чёрной дыры.
 nucleo=Ты затеял опасное дело...
 ht-trains=Открывает более эффективные некселитовые поезда.
