--- a/locale/zh-CN/pyhightech.cfg
+++ b/locale/zh-CN/pyhightech.cfg
@@ -404,7 +404,7 @@ ht-generic-wagon=蓝坷垃加固货运车厢。
 ht-generic-fluid-wagon=蓝坷垃加固液罐车厢。
 
 [technology-name]
-electronics=真空管电子学						   
+electronics=真空管电子学
 basic-electronics=基础电子学
 advanced-circuit=高级电子学
 integrated-circuits-1=小型集成电路
@@ -416,7 +416,7 @@ graphene=石墨烯技术
 quantum-processor=纳米技术
 aerogel=气凝胶技术
 earnshaw-theorem=恩绍定理
-quantum=量子计算
+space-science-pack=量子计算
 penrose=彭罗斯过程
 nucleo=核合成
 ht-trains=高科技列车 MK1
@@ -483,7 +483,7 @@ graphene=解锁石墨烯技术和生产。
 quantum-processor=解锁纳米组件和技术。
 aerogel=解锁气凝胶技术。
 earnshaw-theorem=引力场产生的经典平方反比磁力。
-quantum=解锁量子技术和量子计算机。
+space-science-pack=解锁量子技术和量子计算机。
 nucleo=由此，您将踏入一个危险的领域。
 penrose=从旋转的黑洞中提取的终极能量。
 ht-trains=解锁效率更高的蓝坷垃动力列车。
